--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
+  "main": "./src/app/polaris-module",
   "devDependencies": {
     "@angular/cli": "1.5.5",
     "@angular/compiler-cli": "^5.0.0",
